--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: pinpointreadR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Read PinPoint GPS Data Into R
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Scott Yanco
+Maintainer: Scott Yanco <scott.yanco@ucdenver.edu>
+Description: Reads several generation of PinPoint location data output (.txt 
+    files) into R as a dataframe object.
+License: MIT
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.0
